[gd_scene load_steps=23 format=2]

[ext_resource path="res://source/player_charecter/PlayerCharecter.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/characters/player_female/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/characters/player_female/07.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/characters/player_female/08.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/characters/player_female/05.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/characters/player_female/06.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/characters/player_female/03.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/characters/player_female/04.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/characters/player_male/06.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/characters/player_female/02.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/characters/player_female/01.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/characters/player_male/01.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/characters/player_male/08.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/characters/player_male/05.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/characters/player_male/02.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/characters/player_male/idle.png" type="Texture" id=16]
[ext_resource path="res://assets/textures/characters/player_male/03.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/characters/player_male/04.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/characters/player_male/07.png" type="Texture" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.0
height = 202.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[node name="PlayerCharecter" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -134 )
shape = SubResource( 1 )

[node name="AnimatedSpriteMale" type="AnimatedSprite" parent="."]
position = Vector2( 0, -119 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="AnimatedSpriteFemale" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -119 )
frames = SubResource( 3 )
animation = "idle"
playing = true
